# osl-stats

./: README.md  setup.cfg
doc/: Makefile  conf.py  documentation.rst  index.rst  install.rst
doc/tutorials/: group_contrast.py  group_network_response.py
osl_stats/: __init__.py  glm_perm.py
