# This is the configuration file for setuptools.

[metadata]
name = osl-stats
version = 0.0.dev1
description = Tools for performing statistical significance testing
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/OHBA-analysis/osl-stats
project_urls =
    Documentation = https://osl-stats.readthedocs.io/en/latest/

[options]
install_requires =
    numpy~=1.23.5
    scipy~=1.10.1
    tabulate~=0.9.0
    glmtools~=0.2.1
packages =
    osl_stats

[options.packages.find]
where = osl_stats

[options.package_data]
# include all files types when building the distribution
* = *

[build_sphinx]
source_dir = doc
build_dir = build/sphinx
